<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/the_movy_cntr"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".First4Fragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:background="#B4B4B4"
                app:cardBackgroundColor="#505050"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13dp">

                    <TextView
                        android:id="@+id/txt_loc_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Movie"
                        android:textColor="@color/white"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/txt_loc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_loc_s"
                        android:layout_marginStart="18dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_pub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crd_movie"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:background="#B4B4B4"
                app:cardBackgroundColor="#505050"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13dp">

                    <TextView
                        android:id="@+id/txt_pub_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Published"
                        android:textColor="@color/white"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/txt_published"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_pub_s"
                        android:layout_marginStart="18dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_manged_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crd_pub"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:background="#B4B4B4"
                app:cardBackgroundColor="#505050"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13dp">

                    <TextView
                        android:id="@+id/txt_managed_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Managed_by"
                        android:textColor="@color/white"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/txt_managed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_managed_s"
                        android:layout_marginStart="18dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_summari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crd_manged_by"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:background="#B4B4B4"
                app:cardBackgroundColor="#505050"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="13dp">

                    <TextView
                        android:id="@+id/txt_summar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Summary"
                        android:textColor="@color/white"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/txt_summari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_summar"
                        android:layout_marginStart="18dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ed_goal_prim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crd_summari"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="#B4B4B4"
                app:cardBackgroundColor="#505050"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="13dp">

                    <ImageView
                        android:id="@+id/img_zombie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
